Fixed text alignment issue

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -230,6 +230,8 @@ input[type=text][readonly] {
 
       &__content {
         padding: 10% 16px 24px;
+        text-align: center;
+
         & > h2 {
           margin: 0 0 32px;
           text-align: center;
